using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    public static string AttackCoolDown => "AttackCoolDown";

    public static string IsGrounded => "IsGrounded";

    public static string IsMoving => "isMoving";
    public static string IsRunning => "isRunning";
    public static string yVelocity => "yVelocity";
    public static string Jump => "Jump";

    public static string IsOnWall => "IsOnWall";
    public static string IsOnCeiling => "IsOnCeiling";
    public static string Attack => "Attack";
    public static string CanMove => "CanMove";
    public static string HasTarget => "HasTarget";
    public static string IsAlive => "IsAlive";
    public static string IsHit => "IsHit";
    public static string Hit => "Hit";
    public static string LockVelocity => "LockVelocity";
    public static string RangedAttack => "RangedAttack";

    public static string IsWallJump => "IsWallJump";
}
